add logic in front

--- a/src/app/contests/contests.component.html
+++ b/src/app/contests/contests.component.html
@@ -5,7 +5,7 @@
         <div  class="contest">
           <div class="contest_name">
             <h2>{{contest.name}}</h2>
-            <p>{{contest._id}}</p>
+            <!-- <p>{{contest._id}}</p> -->
           </div>
           <div class="contest_description">
             <p>{{contest.description}}</p>
